Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationLittleBlandChomped.calc
a .0e23 b 1.e25 c 2.3e31 d 34.5e45 e 6.78e73 f 99.99e56 g 3e93 h 76e45
.0e23
1.e25
2.3e31
34.5e45
6.78e73
99.99e56
3e93
76e45
a .0e2 b 1.e2 c 2.3e3 d 34.5e4 e 6.78e7 f 99.99e5 g 3e9 h 76e4
.0e2
1.e2
2.3e3
34.5e4
6.78e7
99.99e5
3e9
76e4