Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleBlandWithBadCharacters-18.calc
a .0e%23 b 1.e%25 c 2.3e%31 d 34.5e%45 e 6.78e%73 f 99.99e%56 g 3e%93 h 76e%45
